<resources>
    <string name="app_name">MERAKI</string>
    <string name="et_correo">Correo electrónico</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_iniciar_sesión">Iniciar sesión</string>
    <string name="tv_registrar">Registrarse</string>
    <string name="tv_meraki">Meraki</string>
    <string name="tv_pregunta">¿Cómo desea registrarse?</string>
    <string name="tv_cliente">TI \nEN \nDA</string>
    <string name="tv_usuario">CLI \nEN \nTE</string>
    <string name="tv_titulo_t">TIENDA</string>
    <string name="btn_registrar">REGISTRAR</string>
    <string name="tv_cancelar">CANCELAR</string>
    <string name="et_password_rep">Repetir contraseña</string>
    <string name="et_cif">CIF</string>
    <string name="et_ubicacion">Ubicación de tienda</string>
    <string name="tv_titulo_u">USUARIO</string>
    <string name="et_nombre">Nombre</string>
    <string name="msj_registrado">Usuario registrado</string>
    <string name="msj_no_registrado">Usuario no registrado</string>
    <string name="msj_no_accede">Error de acceso</string>
    <string name="no_datos">Se deben rellenar todos los campos</string>
    <string name="password_desigual">La confirmación no coincide con la contraseña</string>


    <string-array name="tiendas_array">
        <item>Comida</item>
        <item>Deporte</item>
        <item>Ropa</item>
        <item>Bricolaje</item>
        <item>Juguetes</item>
        <item>Mascotas</item>
        <item>Muebles</item>
    </string-array>

    <string-array name="tiendas_usuarios_array">
        <item>Todas</item>
        <item>Comida</item>
        <item>Deporte</item>
        <item>Ropa</item>
        <item>Bricolaje</item>
        <item>Juguetes</item>
        <item>Mascotas</item>
        <item>Muebles</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_saludo">HOLA!</string>
    <string name="tv_pregunta_user">¿Qué tiendas deseas explorar?</string>
    <string name="tv_mis_datos">MIS DATOS</string>
    <string name="btn_elegir_ubicacion">Elegir ubicación</string>
    <string name="pass_pocos_caracteres">La contraseña debe tener mas de cinco caracteres</string>
    <string name="error_insercion_datos">Error en la inserción de datos</string>
    <string name="et_nombre_tienda">Nombre de tienda</string>
    <string name="msj_error_iniciar_sesion">Error en iniciar sesion, compruebe que los campos son correctos</string>
    <string name="tv_catalogo">INVENTARIO</string>
    <string name="tv_editar_catalogo">EDITAR CATÁLOGO</string>
    <string name="et_producto">Producto</string>
    <string name="et_precio">Precio</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_agregar">Añadir producto</string>
    <string name="tv_telefono">Número de teléfono</string>
    <string name="et_telefono">Ej: 123 456 789</string>
    <string name="tv_direccion">Dirección de tienda</string>
    <string name="et_direccion">Ej: Calle Durero, 23</string>
    <string name="btn_guardar">Guardar</string>
    <string name="tv_info">(Esta información aparecerá a los usuarios. Si se rellenan estos datos, la tienda tendrá más posiblilidad de éxito)</string>
    <string name="telefono_incorrecto">El teléfono introducido es incorrecto</string>
    <string name="et_nif">NIF</string>
    <string name="tv_nif_info">(Si se rellena el NIF, les aparecerá a los ususarios que esta tienda está verificada)</string>
    <string name="btn_verificar">Verificar</string>
    <string name="msj_tienda_registrada">Tienda registrada</string>
    <string name="msj_tienda_no_registrada">Tienda no registrada</string>
    <string name="tv_mis_favoritos">MIS FAVORITOS</string>
    <string name="tv_pregunta_prod">¿Buscas un producto en especial?</string>
    <string name="et_buscar_prod">"Ej: Agua "</string>
    <string name="tv_tienda_r">¿Tienes una tienda?</string>
    <string name="tv_tienda_r2">Registrate para dar a conocer más tu negocio, llegar a un público más amplio, promocionarte y mucho más.</string>
    <string name="tv_usuario_r">¿Quieres unirte a MERAKI?</string>
    <string name="tv_usuario_r2">Registrate para ver todas las tiendas de tu zona, qué venden, a qué precio y mucho más.</string>
    <string name="tv_usuario_inv2">Registrate para acceder a todas las funcionalidades. \n ¡Totalmente gratis!</string>
    <string name="tv_usuario_inv">PARA ACCEDER A ESTA FUNCIÓN ES NECESARIO REGISTRARSE</string>


</resources>
