<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileTiendaFragment"
    android:background="@color/paleta1">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/degradado"
        android:alpha="0.1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvMisDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_mis_datos"
                android:textSize="30dp"
                android:textAllCaps="true"
                android:fontFamily="@font/comfortaa_regular"
                android:textColor="@color/paleta3"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/llFormulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMisDatos"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_regular"
                    android:text="@string/et_nombre_tienda"
                    android:textColor="@color/paleta4"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta6"
                    android:textColorHint="@color/paleta6"
                    android:textColor="@color/paleta6"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:maxLines="1"
                    android:enabled="false"/>

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_info"
                    android:textSize="12sp"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textColor="@color/paleta4"
                    android:layout_marginTop="15dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_telefono"
                    android:textSize="18sp"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textColor="@color/paleta4"/>

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta6"
                    android:textColorHint="@color/paleta6"
                    android:textColor="@color/paleta6"
                    android:hint="@string/et_telefono"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:inputType="number"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/tvDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_direccion"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textColor="@color/paleta4"/>

                <EditText
                    android:id="@+id/etDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta6"
                    android:textColorHint="@color/paleta6"
                    android:textColor="@color/paleta6"
                    android:hint="@string/et_direccion"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:inputType="textCapWords"
                    android:layout_marginLeft="20dp"
                    android:maxLines="1"/>

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/btn_guardar"
                    android:textColor="@color/paleta1"
                    android:textSize="20sp"
                    android:fontFamily="@font/comfortaa_regular"
                    android:background="@drawable/boton_redondeado_rojo"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_gravity="center"/>

                <!-- LÍNEA SEPARADORA
                    <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>-->


                <TextView
                    android:id="@+id/tvNIFInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nif_info"
                    android:textSize="12sp"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textColor="@color/paleta4"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etNIF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comic_sans"
                        android:backgroundTint="@color/paleta6"
                        android:textColorHint="@color/paleta6"
                        android:textColor="@color/paleta6"
                        android:hint="@string/et_nif"
                        android:gravity="center"
                        android:textSize="17sp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:maxLines="1"/>

                    <Button
                        android:id="@+id/btnVerificar"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/btn_verificar"
                        android:textColor="@color/paleta3"
                        android:textSize="18sp"
                        android:fontFamily="@font/comfortaa_regular"
                        android:background="@drawable/boton_redondeado_blanco"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>