<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegUsuarioActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/degradado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivFondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nubes"
            android:alpha="0.6"
            android:background="@drawable/formulario_redondeado"
            android:layout_centerInParent="true"
            android:layout_above="@+id/btnIniciar" />

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Registrar"
            android:background="@drawable/boton_redondeado_blanco"
            android:text="@string/btn_registrar"
            android:textColor="@color/paleta3"
            android:textSize="24sp"
            android:fontFamily="@font/comfortaa_regular"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginBottom="15dp"
            android:layout_centerInParent="true"
            android:layout_above="@+id/tvCancelar"/>

        <TextView
            android:id="@+id/tvCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cancelar"
            android:textColor="@color/paleta1"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/comfortaa_regular"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:layout_centerInParent="true"
            android:layout_above="@+id/btnIniciar">


            <LinearLayout
                android:id="@+id/llFormulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvTituloU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_titulo_u"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textColor="@color/paleta1"
                    android:fontFamily="@font/comic_sans" />

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_nombre"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta1"
                    android:textColorHint="@color/paleta1"
                    android:textColor="@color/paleta1"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/etEmailU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_correo"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta1"
                    android:textColorHint="@color/paleta1"
                    android:textColor="@color/paleta1"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:layout_marginTop="40dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />


                <EditText
                    android:id="@+id/etPasswordU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_password"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta1"
                    android:textColorHint="@color/paleta1"
                    android:textColor="@color/paleta1"
                    android:imeActionLabel="Custom"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:layout_marginTop="40dp"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/etRepPasswordU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_password_rep"
                    android:fontFamily="@font/comic_sans"
                    android:backgroundTint="@color/paleta1"
                    android:textColorHint="@color/paleta1"
                    android:textColor="@color/paleta1"
                    android:imeActionLabel="Custom"
                    android:gravity="center"
                    android:textSize="19sp"
                    android:layout_marginTop="40dp"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>